@@ -8,7 +8,9 @@ c - crash     b - bug fix    e - enhancement    f - new feature
   f - MOMSLEEPTIME env delays pbs_mom initialization
   e - minor log message fixups
   e - enable node-reuse in qsub eval if server resources_available.nodect is set
-  e - pbs_mom and pbs_server can now get mom's port from PBS_MOM_SERVER_PORT env
+  e - pbs_mom and pbs_server can now use PBS_MOM_SERVER_PORT,
+      PBS_BATCH_SERVICE_PORT, and PBS_MANAGER_SERVICE_PORT env vars.
+  e - pbs_server can also use PBS_SCHEDULER_SERVICE_PORT env var.
 
 2.1.6
   b - freebsd5 build fix
